[gd_scene load_steps=54 format=3 uid="uid://d4fvwju6llih5"]

[ext_resource type="Script" path="res://world.gd" id="1_kpnr0"]
[ext_resource type="Texture2D" uid="uid://d4acv3xj4w8e3" path="res://tileset.png" id="1_mxe2x"]
[ext_resource type="Texture2D" uid="uid://bxadacpuhjhnm" path="res://animatedBG.png" id="2_u82p7"]
[ext_resource type="Script" path="res://Camera2D.gd" id="3_1bjbt"]
[ext_resource type="Script" path="res://TileMap.gd" id="3_q0x14"]
[ext_resource type="Texture2D" uid="uid://dj3ei34gd4kem" path="res://scorebox.png" id="5_pqrvl"]
[ext_resource type="FontFile" uid="uid://cnvxbs545p4dy" path="res://VCR_OSD_MONO_1.001.ttf" id="8_ybhcg"]
[ext_resource type="AudioStream" uid="uid://c6lj3rbos4e0g" path="res://477391__nuff3__steps-dirt_1b.ogg" id="9_24nw5"]
[ext_resource type="AudioStream" uid="uid://dbkv0jrrdnbyr" path="res://699493__valenspire__plant_harvest_04.wav" id="10_bt84x"]
[ext_resource type="AudioStream" uid="uid://b3s4mmybj1yfy" path="res://477782__breviceps__spitting-a-watermelon-seed.mp3" id="11_g67ca"]
[ext_resource type="AudioStream" uid="uid://ch2lbas6fkcpv" path="res://516257__wyronroberth__grab-_-can-watering.mp3" id="12_dd11e"]
[ext_resource type="Texture2D" uid="uid://03oqwrrln34o" path="res://plusbuttontex_hover.png" id="16_gsy4b"]
[ext_resource type="Texture2D" uid="uid://c40i0te5jd3ta" path="res://MenuSH.png" id="17_1surw"]
[ext_resource type="Script" path="res://MenuShop.gd" id="18_5y0tx"]
[ext_resource type="Texture2D" uid="uid://cdsythbpeb72j" path="res://minusbuttontex_hover.png" id="18_lhfnv"]
[ext_resource type="Texture2D" uid="uid://ui3orbrbtjag" path="res://buybuttontex_hover.png" id="18_wuxku"]
[ext_resource type="Texture2D" uid="uid://brchixq8mhd7l" path="res://itemBox.png" id="19_lwcvc"]
[ext_resource type="Texture2D" uid="uid://dvre7eeokee4k" path="res://itemBoxHover.png" id="20_55ef8"]
[ext_resource type="Texture2D" uid="uid://bwvb5ef2ulp2s" path="res://itemBoxSelected.png" id="21_7a01u"]
[ext_resource type="AudioStream" uid="uid://8k07t7m67bo2" path="res://419023__jacco18__acess-denied-buzz.mp3" id="21_lf5a1"]
[ext_resource type="Texture2D" uid="uid://coiqecw2b8x4l" path="res://itemBoxDisabled.png" id="21_n8i8j"]
[ext_resource type="AudioStream" uid="uid://bappd4cgduf0i" path="res://352117__inspectorj__dropping-wood-e.wav" id="22_m5kyv"]
[ext_resource type="Texture2D" uid="uid://ouyiydsi885u" path="res://plusbuttontex.png" id="22_ticb7"]
[ext_resource type="Texture2D" uid="uid://dkjn4qa52c78p" path="res://minusbuttontex.png" id="23_uii80"]
[ext_resource type="Texture2D" uid="uid://bqhk3gg76ytf4" path="res://buybuttontex.png" id="24_hoxhx"]
[ext_resource type="AudioStream" uid="uid://btonaur6vtq47" path="res://menu_open.mp3" id="25_mgbia"]
[ext_resource type="AudioStream" uid="uid://cs7nr1sc4herl" path="res://menu_close.mp3" id="26_ll8df"]
[ext_resource type="AudioStream" uid="uid://xq3jp21vid42" path="res://201159__kiddpark__cash-register.mp3" id="28_3ojm6"]
[ext_resource type="AudioStream" uid="uid://y8t8y432hj2" path="res://UI_Click.mp3" id="29_2gdvs"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ufafw"]
texture = ExtResource("1_mxe2x")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
4:0/0 = 0
5:0/0 = 0
10:0/0 = 0
15:0/0 = 0

[sub_resource type="TileSet" id="TileSet_tnypq"]
resource_local_to_scene = true
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(32, 17)
sources/1 = SubResource("TileSetAtlasSource_ufafw")

[sub_resource type="AtlasTexture" id="AtlasTexture_nbgr6"]
atlas = ExtResource("2_u82p7")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0nbh"]
atlas = ExtResource("2_u82p7")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_owk18"]
atlas = ExtResource("2_u82p7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdwq0"]
atlas = ExtResource("2_u82p7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76fqy"]
atlas = ExtResource("2_u82p7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1kjt"]
atlas = ExtResource("2_u82p7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vym3w"]
atlas = ExtResource("2_u82p7")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3gm0"]
atlas = ExtResource("2_u82p7")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1twui"]
atlas = ExtResource("2_u82p7")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j68t"]
atlas = ExtResource("2_u82p7")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ufh1"]
atlas = ExtResource("2_u82p7")
region = Rect2(256, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8lmly"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbgr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0nbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owk18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdwq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76fqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1kjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vym3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3gm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1twui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j68t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ufh1")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_2pbyw"]
atlas = ExtResource("17_1surw")
region = Rect2(0, 0, 672, 238)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc7am"]
atlas = ExtResource("17_1surw")
region = Rect2(672, 0, 672, 238)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkpq6"]
atlas = ExtResource("17_1surw")
region = Rect2(1344, 0, 672, 238)

[sub_resource type="SpriteFrames" id="SpriteFrames_nqaj5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pbyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc7am")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkpq6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ooigh"]

[sub_resource type="Theme" id="Theme_nwj22"]
HScrollBar/styles/grabber = SubResource("StyleBoxTexture_ooigh")

[sub_resource type="LabelSettings" id="LabelSettings_am3mm"]
font = ExtResource("8_ybhcg")
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_enjic"]
font = ExtResource("8_ybhcg")
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_2ei6v"]
font = ExtResource("8_ybhcg")
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_w66c2"]
font = ExtResource("8_ybhcg")
font_size = 39

[node name="World" type="Node2D"]
script = ExtResource("1_kpnr0")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
texture_filter = 1
tile_set = SubResource("TileSet_tnypq")
format = 2
layer_0/name = "0"
layer_0/y_sort_enabled = true
layer_1/name = "1"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array(131072, 1, 0, 196609, 1, 0, 262146, 1, 0, 131074, 1, 0, 196610, 1, 0, -65535, 1, 0, -131070, 1, 0, 2, 1, 0, -65536, 1, 0, 0, 1, 0, -131071, 1, 0, 65536, 1, 0, 1, 1, 0, 65537, 1, 0, 131073, 1, 0, 65538, 1, 0, -65534, 1, 0, 196611, 1, 0, 131075, 1, 0, 65539, 1, 0, 3, 1, 0, -65533, 1, 0, -65532, 1, 0, 4, 1, 0, 5, 1, 0, 65541, 1, 0, 131077, 1, 0, 131076, 1, 0, 65540, 1, 0, -131069, 1, 0, -196607, 1, 0, -196606, 1, 0, -262143, 1, 0, -65537, 1, 0, -131072, 1, 0, -1, 1, 0)
layer_2/name = "hover"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = -1
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()
script = ExtResource("3_q0x14")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-53, 21)
offset = Vector2(100, 0)
zoom = Vector2(5, 5)
drag_horizontal_enabled = true
drag_vertical_enabled = true
script = ExtResource("3_1bjbt")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scale = Vector2(30, 30)
transform = Transform2D(30, 0, 0, 30, 0, 0)
scroll_base_scale = Vector2(7, 7)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ParallaxBackground"]
z_index = -5
texture_filter = 1
position = Vector2(19.2667, 10.9167)
scale = Vector2(1.22083, 0.692708)
sprite_frames = SubResource("SpriteFrames_8lmly")
frame = 6

[node name="WheatTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="GrassTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="UI" type="CanvasLayer" parent="."]
layer = 5

[node name="Container" type="GridContainer" parent="UI"]
offset_right = 1156.0
offset_bottom = 647.0

[node name="MenuShop" type="AnimatedSprite2D" parent="UI/Container"]
texture_filter = 1
position = Vector2(583, 730)
sprite_frames = SubResource("SpriteFrames_nqaj5")
script = ExtResource("18_5y0tx")

[node name="OpenCloseButton" type="TextureButton" parent="UI/Container/MenuShop"]
offset_left = -113.0
offset_top = -118.0
offset_right = 112.0
offset_bottom = -86.0

[node name="InvButton" type="TextureButton" parent="UI/Container/MenuShop"]
offset_left = -329.0
offset_top = -70.0
offset_right = -7.0
offset_bottom = 1.0

[node name="ShopButton" type="TextureButton" parent="UI/Container/MenuShop"]
offset_left = 8.0
offset_top = -71.0
offset_right = 328.0
offset_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Container/MenuShop"]
offset_left = -308.0
offset_top = 28.0
offset_right = 178.0
offset_bottom = 112.0
theme = SubResource("Theme_nwj22")

[node name="GridContainer" type="GridContainer" parent="UI/Container/MenuShop/ScrollContainer"]
custom_minimum_size = Vector2(50, 9)
layout_mode = 2
theme_override_constants/h_separation = 21
columns = 100

[node name="ItemButton1" type="TextureButton" parent="UI/Container/MenuShop/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(10, 9)
layout_mode = 2
texture_normal = ExtResource("19_lwcvc")
texture_hover = ExtResource("20_55ef8")
texture_disabled = ExtResource("21_n8i8j")
texture_focused = ExtResource("21_7a01u")

[node name="ItemSprite" type="Sprite2D" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton1"]
texture_filter = 1
position = Vector2(30.9999, 31)
scale = Vector2(0.975, 1)

[node name="QuantityLabel" type="Label" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton1"]
layout_mode = 2
offset_left = 35.0
offset_top = 46.0
offset_right = 58.0
offset_bottom = 60.0
label_settings = SubResource("LabelSettings_am3mm")
horizontal_alignment = 2

[node name="idLabel" type="Label" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton1"]
visible = false
layout_mode = 0
offset_left = 1.99994
offset_top = 64.0
offset_right = 41.9999
offset_bottom = 90.0

[node name="ItemButton2" type="TextureButton" parent="UI/Container/MenuShop/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(10, 9)
layout_mode = 2
texture_normal = ExtResource("19_lwcvc")
texture_hover = ExtResource("20_55ef8")
texture_disabled = ExtResource("21_n8i8j")
texture_focused = ExtResource("21_7a01u")

[node name="ItemSprite" type="Sprite2D" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton2"]
texture_filter = 1
position = Vector2(30.9999, 31)
scale = Vector2(0.975, 1)

[node name="QuantityLabel" type="Label" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton2"]
layout_mode = 2
offset_left = 35.0
offset_top = 46.0
offset_right = 58.0
offset_bottom = 60.0
label_settings = SubResource("LabelSettings_am3mm")
horizontal_alignment = 2

[node name="idLabel" type="Label" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton2"]
visible = false
layout_mode = 0
offset_left = 1.99994
offset_top = 64.0
offset_right = 41.9999
offset_bottom = 90.0

[node name="ItemButton3" type="TextureButton" parent="UI/Container/MenuShop/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(10, 9)
layout_mode = 2
texture_normal = ExtResource("19_lwcvc")
texture_hover = ExtResource("20_55ef8")
texture_disabled = ExtResource("21_n8i8j")
texture_focused = ExtResource("21_7a01u")

[node name="ItemSprite" type="Sprite2D" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton3"]
texture_filter = 1
position = Vector2(30.9999, 31)
scale = Vector2(0.975, 1)

[node name="QuantityLabel" type="Label" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton3"]
layout_mode = 2
offset_left = 35.0
offset_top = 46.0
offset_right = 58.0
offset_bottom = 60.0
label_settings = SubResource("LabelSettings_am3mm")
horizontal_alignment = 2

[node name="idLabel" type="Label" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton3"]
visible = false
layout_mode = 0
offset_left = 1.99994
offset_top = 64.0
offset_right = 41.9999
offset_bottom = 90.0

[node name="ItemButton4" type="TextureButton" parent="UI/Container/MenuShop/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(10, 9)
layout_mode = 2
texture_normal = ExtResource("19_lwcvc")
texture_hover = ExtResource("20_55ef8")
texture_disabled = ExtResource("21_n8i8j")
texture_focused = ExtResource("21_7a01u")

[node name="ItemSprite" type="Sprite2D" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton4"]
texture_filter = 1
position = Vector2(30.9999, 31)
scale = Vector2(0.975, 1)

[node name="QuantityLabel" type="Label" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton4"]
layout_mode = 2
offset_left = 35.0
offset_top = 46.0
offset_right = 58.0
offset_bottom = 60.0
label_settings = SubResource("LabelSettings_am3mm")
horizontal_alignment = 2

[node name="idLabel" type="Label" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton4"]
visible = false
layout_mode = 0
offset_left = 1.99994
offset_top = 64.0
offset_right = 41.9999
offset_bottom = 90.0

[node name="ItemButton5" type="TextureButton" parent="UI/Container/MenuShop/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(10, 9)
layout_mode = 2
texture_normal = ExtResource("19_lwcvc")
texture_hover = ExtResource("20_55ef8")
texture_disabled = ExtResource("21_n8i8j")
texture_focused = ExtResource("21_7a01u")

[node name="ItemSprite" type="Sprite2D" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton5"]
texture_filter = 1
position = Vector2(30.9999, 31)
scale = Vector2(0.975, 1)

[node name="QuantityLabel" type="Label" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton5"]
layout_mode = 2
offset_left = 35.0
offset_top = 46.0
offset_right = 58.0
offset_bottom = 60.0
label_settings = SubResource("LabelSettings_am3mm")
horizontal_alignment = 2

[node name="idLabel" type="Label" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton5"]
visible = false
layout_mode = 0
offset_left = 1.99994
offset_top = 64.0
offset_right = 41.9999
offset_bottom = 90.0

[node name="ItemButton6" type="TextureButton" parent="UI/Container/MenuShop/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(10, 9)
layout_mode = 2
texture_normal = ExtResource("19_lwcvc")
texture_hover = ExtResource("20_55ef8")
texture_disabled = ExtResource("21_n8i8j")
texture_focused = ExtResource("21_7a01u")

[node name="ItemSprite" type="Sprite2D" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton6"]
texture_filter = 1
position = Vector2(30.9999, 31)
scale = Vector2(0.975, 1)

[node name="QuantityLabel" type="Label" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton6"]
layout_mode = 2
offset_left = 35.0
offset_top = 46.0
offset_right = 58.0
offset_bottom = 60.0
label_settings = SubResource("LabelSettings_am3mm")
horizontal_alignment = 2

[node name="idLabel" type="Label" parent="UI/Container/MenuShop/ScrollContainer/GridContainer/ItemButton6"]
visible = false
layout_mode = 0
offset_left = 1.99994
offset_top = 64.0
offset_right = 41.9999
offset_bottom = 90.0

[node name="BuySellDialog" type="Label" parent="UI/Container/MenuShop"]
offset_left = 210.0
offset_top = 28.0
offset_right = 306.0
offset_bottom = 70.0
text = "Selecciona un item"
label_settings = SubResource("LabelSettings_enjic")
horizontal_alignment = 3
autowrap_mode = 3

[node name="addunit" type="TextureButton" parent="UI/Container/MenuShop/BuySellDialog"]
layout_mode = 0
offset_left = 79.9999
offset_top = 46.0
offset_right = 94.9999
offset_bottom = 61.0
focus_mode = 0
texture_normal = ExtResource("22_ticb7")
texture_hover = ExtResource("16_gsy4b")

[node name="removeunit" type="TextureButton" parent="UI/Container/MenuShop/BuySellDialog"]
layout_mode = 0
offset_left = 2.99994
offset_top = 46.0
offset_right = 17.9999
offset_bottom = 61.0
texture_normal = ExtResource("23_uii80")
texture_hover = ExtResource("18_lhfnv")

[node name="buy" type="TextureButton" parent="UI/Container/MenuShop/BuySellDialog"]
layout_mode = 0
offset_left = 18.9999
offset_top = 46.0
offset_right = 78.9999
offset_bottom = 61.0
texture_normal = ExtResource("24_hoxhx")
texture_hover = ExtResource("18_wuxku")

[node name="Label" type="Label" parent="UI/Container/MenuShop/BuySellDialog/buy"]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 57.0
offset_bottom = 15.0
text = "vender"
label_settings = SubResource("LabelSettings_2ei6v")
horizontal_alignment = 1

[node name="WheatScore" type="Node2D" parent="UI/Container"]

[node name="MoneyBox" type="Sprite2D" parent="UI/Container/WheatScore"]
texture_filter = 1
position = Vector2(1059, 40.5)
scale = Vector2(3, 2.448)
texture = ExtResource("5_pqrvl")

[node name="Money" type="Label" parent="UI/Container/WheatScore"]
texture_filter = 1
offset_left = 976.0
offset_top = 18.0
offset_right = 1141.0
offset_bottom = 62.0
text = "$0"
label_settings = SubResource("LabelSettings_w66c2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sounds" type="Node2D" parent="."]
position = Vector2(-19, 9)

[node name="hoe" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_24nw5")

[node name="harvest" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("10_bt84x")

[node name="plant" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("11_g67ca")

[node name="watering" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("12_dd11e")

[node name="denied" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("21_lf5a1")

[node name="openinv" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("22_m5kyv")

[node name="openmenu" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("25_mgbia")

[node name="closemenu" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("26_ll8df")

[node name="buysell" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("28_3ojm6")

[node name="UIClick" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("29_2gdvs")

[connection signal="timeout" from="WheatTimer" to="TileMap" method="_on_wheat_timer_timeout"]
[connection signal="timeout" from="GrassTimer" to="TileMap" method="_on_grass_timer_timeout"]
[connection signal="pressed" from="UI/Container/MenuShop/OpenCloseButton" to="UI/Container/MenuShop" method="_on_open_close_button_pressed"]
[connection signal="pressed" from="UI/Container/MenuShop/InvButton" to="UI/Container/MenuShop" method="_on_inv_button_pressed"]
[connection signal="pressed" from="UI/Container/MenuShop/ShopButton" to="UI/Container/MenuShop" method="_on_shop_button_pressed"]
[connection signal="pressed" from="UI/Container/MenuShop/BuySellDialog/addunit" to="UI/Container/MenuShop" method="_on_addunit_pressed"]
[connection signal="pressed" from="UI/Container/MenuShop/BuySellDialog/removeunit" to="UI/Container/MenuShop" method="_on_removeunit_pressed"]
[connection signal="pressed" from="UI/Container/MenuShop/BuySellDialog/buy" to="UI/Container/MenuShop" method="_on_buy_pressed"]
